trying to fix touch on ios

--- a/public/style.css
+++ b/public/style.css
@@ -73,6 +73,7 @@ h1, h2{
 .day-container .day-header,
 .day-container .word-of-the-day{
     border-radius: 5px;
+    cursor: pointer;
 }
 
 .day-container .day-header,
